--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,7 +61,7 @@
                     android:layout_marginBottom="108dp"
                     android:fontFamily="@font/quicksand_bold"
                     android:text="@string/home_title"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#444444"
                     android:textSize="36sp" />
 
                 <TextView
@@ -94,6 +94,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -108,7 +109,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/numbers_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelOne"
@@ -133,6 +134,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="#FFFFFF"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGreenDark"
@@ -163,6 +165,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -177,7 +180,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/essentials_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelTwo"
@@ -201,6 +204,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGreenDark"
@@ -231,6 +235,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -245,7 +250,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/food_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelThree"
@@ -269,6 +274,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGreenDark"
@@ -299,6 +305,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -313,7 +320,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="7dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/emergency_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelFour"
@@ -337,6 +344,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorGreenDark"
