--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -89,7 +89,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="16dp"
-                                android:fontFamily="sans-serif-medium"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="Saved"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 android:textSize="20sp"
@@ -104,6 +104,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="16dp"
                                 android:layout_marginBottom="16dp"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="Still unsure of some words? Let's take another look!"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +144,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="16dp"
-                                android:fontFamily="sans-serif-medium"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="Mastered"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 android:textSize="20sp"
@@ -158,6 +159,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="16dp"
                                 android:layout_marginBottom="16dp"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="These are the words you're familiar with!"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -199,7 +201,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="16dp"
-                                android:fontFamily="sans-serif-medium"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="My Words"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 android:textSize="20sp"
@@ -214,6 +216,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="16dp"
                                 android:layout_marginBottom="16dp"
+                                android:fontFamily="@font/quicksand_bold"
                                 android:text="The words you've added!"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 app:layout_constraintBottom_toBottomOf="parent"
