--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -33,11 +33,12 @@
 
                 <TextView
                     android:id="@+id/txtChineseCharacter"
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginEnd="50dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/quicksand_bold"
                     android:gravity="center|center_horizontal|center_vertical"
                     android:text="@string/phrase_placeholder"
                     android:textAlignment="center"
@@ -53,6 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/quicksand_bold"
                     android:text="@string/progress_placeholder"
                     android:textAlignment="textStart"
                     app:layout_constraintBottom_toTopOf="@+id/cvAnswerOne"
@@ -114,6 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
+                    android:fontFamily="@font/quicksand_bold"
                     android:text="TextView"
                     android:textColor="@color/colorRed"
                     android:textStyle="bold"
@@ -141,7 +144,7 @@
                         android:layout_height="48dp"
                         android:layout_marginLeft="8dp"
                         android:elevation="10dp"
-                        android:fontFamily="sans-serif-medium"
+                        android:fontFamily="@font/quicksand_bold"
                         android:text="answerOne"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
@@ -154,7 +157,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:elevation="10dp"
-                        android:fontFamily="sans-serif-medium"
+                        android:fontFamily="@font/quicksand_bold"
                         android:text="answerTwo"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
@@ -167,7 +170,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:elevation="10dp"
-                        android:fontFamily="sans-serif-medium"
+                        android:fontFamily="@font/quicksand_bold"
                         android:text="answerThree"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
@@ -179,9 +182,9 @@
                     android:id="@+id/txtScore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="sans-serif-medium"
+                    android:fontFamily="@font/quicksand_bold"
                     android:letterSpacing="0.1"
                     android:textAlignment="textEnd"
                     android:textColor="@color/colorGreen"
@@ -204,8 +207,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:fontFamily="sans-serif-medium"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/quicksand_bold"
                     android:text="timer"
                     android:textColor="@color/colorRed"
                     android:textSize="24sp"
@@ -238,6 +241,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        android:fontFamily="@font/quicksand_bold"
         android:letterSpacing="0.1"
         android:text="TESTING"
         android:textAlignment="center"
