--- a/app/src/main/res/layout/fragment_test_home.xml
+++ b/app/src/main/res/layout/fragment_test_home.xml
@@ -94,6 +94,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -108,7 +109,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/numbers_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelOneTest"
@@ -132,6 +133,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorRedDark"
@@ -164,6 +166,7 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -179,7 +182,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/essentials_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelTwoTest"
@@ -203,6 +206,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorRedDark"
@@ -234,6 +238,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -248,7 +253,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/food_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelThree"
@@ -272,6 +277,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorRedDark"
@@ -303,6 +309,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
+                            android:fontFamily="@font/quicksand_bold"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="0dp"
                             android:padding="0dp"
@@ -317,7 +324,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:fontFamily="sans-serif-medium"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/emergency_title"
                             android:textSize="24sp"
                             app:layout_constraintStart_toStartOf="@+id/txtLevelFourTest"
@@ -341,6 +348,7 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/quicksand_bold"
                             android:text="@string/button_start"
                             android:textAlignment="viewStart"
                             android:textColor="@color/colorRedDark"
