--- a/app/src/main/res/layout/phrase_row.xml
+++ b/app/src/main/res/layout/phrase_row.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
+        android:fontFamily="@font/quicksand_bold"
         android:letterSpacing="0.1"
         android:text="PINYIN"
         android:textAllCaps="true"
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
+        android:fontFamily="@font/quicksand_bold"
         android:letterSpacing="0.1"
         android:text="CHINESE"
         android:textAllCaps="true"
@@ -37,6 +39,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/quicksand_bold"
         android:text="en"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/quicksand_bold"
         android:text="cn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView18"
@@ -59,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/quicksand_bold"
         android:text="pinyin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView19"
@@ -70,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/quicksand_bold"
         android:letterSpacing="0.1"
         android:text="ENGLISH"
         android:textAllCaps="true"
