--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorRed"
+        android:fontFamily="@font/quicksand_bold"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -60,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="64dp"
+            android:fontFamily="@font/quicksand_bold"
             android:text="masterec"
             android:textColor="@color/colorBlue"
             android:textSize="16sp"
@@ -73,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/quicksand_bold"
             android:text="learned"
             android:textColor="@color/colorBlue"
             android:textSize="16sp"
@@ -86,6 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/quicksand_bold"
             android:text="forgot"
             android:textColor="@color/colorRed"
             android:textSize="16sp"
