--- a/app/src/main/res/layout/custom_alert_dialog_profile.xml
+++ b/app/src/main/res/layout/custom_alert_dialog_profile.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorBlue"
+        android:fontFamily="@font/quicksand_bold"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
