--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/quicksand_bold"
             android:text="Name"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +49,7 @@
             android:id="@+id/txtIsAchieved"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_bold"
             android:text="isAchieved"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/pbAchievement"
@@ -58,13 +59,16 @@
 
         <TextView
             android:id="@+id/txtAchievementDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/quicksand_bold"
             android:text="do something"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/pbAchievement"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtAchievementName" />
 
